init dummy data and update query for better result